# ritm_ia

./: .gitignore  EDA_analysis.py  LICENSE  README.md  X_test.csv  extract_12month.py  extract_recent_data.py  features.py  improve_features.py  lastfm_client  lastfm_client.py  listenbrainz_client.py  main.py  main_03.py  model.py  model_test.py  model_train.py  music_master_2021_final.csv  music_master_recent_final.csv  musicbrainz_client.py  prompts.py  pyproject.toml  supervised_learning.py  y_test.csv
.devcontainer/: devcontainer.json
inputs/: df_music_master_test.csv  imputation_values.joblib  kmeans_3d_model.joblib  kmeans_pca_kernel_model.joblib  kmeans_tsne_model.joblib  music_master_2004_final_clean_20260406.csv  music_master_2005_final_clean_20260405.csv  music_master_2006_final_clean_20260405.csv  music_master_2007_final_clean_20260405.csv  music_master_2008_final_clean_20260405.csv  music_master_2009_final_clean_20260404.csv  music_master_2010_final_clean_20260404.csv  music_master_2011_final_clean_20260404.csv  music_master_2012_final_clean_20260404.csv  music_master_2013_final_clean_20260404.csv  music_master_2014_final_clean_20260404.csv  music_master_2015_final_clean_20260403.csv  music_master_2016_final_clean_20260403.csv  music_master_2017_final_clean_20260403.csv  music_master_2018_final_clean_20260403.csv  music_master_2019_final_clean_20260403.csv  music_master_2020_final_clean_20260403.csv  music_master_2021_final_clean_20260403.csv  music_master_2022_final_clean_20260402.csv  music_master_2023_final_clean_20260402.csv  pca_3_model.joblib  (+9 more)
(+18 files in other folders)
