[project]
name = "ritm-ia"
version = "0.1.0"
description = "Schoolar project about pretiction musical tracks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dill>=0.4.1",
    "factor-analyzer>=0.5.1",
    "gensim>=4.4.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.4.0",
    "keras>=3.0.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.6.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<81",
    "streamlit>=1.56.0",
    "stylecloud>=0.5.2",
    "tensorflow>=2.21.0",
    "xgboost>=3.2.0",
    "yellowbrick>=1.5",
]
